--- a/frontend/views/content/home.html
+++ b/frontend/views/content/home.html
@@ -1,4 +1,4 @@
-<!--<div class="container">
+<div class="container">
 
     <a class="btn btn-default" ng-click="buttonClick()">Demo Button</a>
 
@@ -29,8 +29,5 @@
             <a class="various fancybox.iframe" href="http://www.youtube.com/embed/L9szn1QQfas?autoplay=1" fancybox><img ng-src="http://img.youtube.com/vi/L9szn1QQfas/maxresdefault.jpg" class="img-full"></a>
         </div>
     </div>
-
-</div>-->
-<div>
 
 </div>
