--- a/views/production.ejs
+++ b/views/production.ejs
@@ -29,7 +29,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@aavidcodetechnology">
+    <meta name="twitter:site" content="@wohligtechnology">
     <meta name="twitter:title" content="<%= ((typeof title) == " undefined ") ? "Node Framework " : title  %>">
     <meta name="twitter:description" content="<%= ((typeof description) == " undefined ") ? "Official Node Framework Website
         " : description  %>">
