--- a/backend/views/content/excel-upload.html
+++ b/backend/views/content/excel-upload.html
@@ -13,7 +13,7 @@
             <div class="sec">
                 <div class="widget-title">
                     <div class="pull-right">
-                        <!-- <a href="mailto:chintan@aavidcode.com?subject=&body=" class="btn btn-primary"><i class="fa fa-share"></i> Send Email</a> -->
+                        <!-- <a href="mailto:chintan@wohlig.com?subject=&body=" class="btn btn-primary"><i class="fa fa-share"></i> Send Email</a> -->
                         <a class="btn btn-success" ng-href="../importFormat/{{form.model}}.xlsx" download><i class="fa fa-table"></i> Download Excel Format </a>
                     </div>
                     <h4>Upload Excel File:</h4>
