--- a/frontend/views/template/footer.html
+++ b/frontend/views/template/footer.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="pull-right">
-                    <p>Developed by <a href="http://www.aavidcode.com" target="_blank">aavidcode Technology</a>.</p>
+                    <p>Developed by <a href="http://www.wohlig.com" target="_blank">Wohlig Technology</a>.</p>
                 </div>
             </div>
         </div>
