--- a/frontend/views/content/home.html
+++ b/frontend/views/content/home.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">
 
     <a class="btn btn-default" ng-click="buttonClick()">Demo Button</a>
 
@@ -30,4 +30,112 @@
         </div>
     </div>
 
-</div>
+</div>-->
+<section>
+    <div>
+        <flex-slider flex-slide="s in homeSlide track by $index" prev-text="" next-text="">
+            <li>
+                <h3>{{s.title}}</h3>
+                <img ng-src="{{s.img}}" class="img-full">
+                <button class="btn btn-default">{{s.btntxt}}</button>
+            </li>
+        </flex-slider>
+    </div>
+</section>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="img/home/offer-1.png" alt="" class="img-responsive">
+                    </div>
+                    <div class="col-md-6">
+                        <div>
+                            <p class="text-uppercase black-lbl">Deal of the week</p>
+                            <h4 class="text-uppercase">Sale up to 30% A Week</h4>
+                        </div>
+                        <div>
+                            <h4>Morning Mojo<br>Coffee Bean Beard Oil</h4>
+                            <button class="btn btn-default shop-btn">Shop Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div>
+                            <p class="text-uppercase black-lbl">New Arrival</p>
+                            <h4 class="text-uppercase">Wild Harvested from the heart of the forest</h4>
+                        </div>
+                        <div>
+                            <h4>Gold Volcanic Clay<br> &amp; Tonka Bean face Wash</h4>
+                            <button class="btn btn-default shop-btn">Shop Now</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="img/home/offer-2.png" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container-fluid">
+        <div class="story">
+            <div>
+                <h3>Our Story</h3>
+                <p>
+                    “Inspired by our travels to off-beat locations across the globe, we have sourced exotic ingredients of the highest quality
+                    to build a line of powerful grooming products for men.”
+                </p>
+                <p>
+                    We find inspiration in outdated lore and urban legends, antiquated herbal wisdom and cutting edge research, native ritual
+                    medicine and modern grooming innovations. Borne of distilled essences and distinct travel memories, each
+                    of our products truly reflects the character of the modern man and his pursuits of passion.
+                </p>
+            </div>
+            <div class="text-center">
+                <ul class="list-inline list-unstyled">
+                    <li>
+                        <div>
+                            <img src="img/home/st-icon-1.png" alt="" class="img-responsive">
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="img/home/st-icon-2.png" alt="" class="img-responsive">
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="img/home/st-icon-3.png" alt="" class="img-responsive">
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="img/home/st-icon-4.png" alt="" class="img-responsive">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <p>
+                    NO ARTIFICIAL FRAGRANCE | NO ARTIFICIAL COLOR | ALL NATURAL ESSENTIAL OILS
+                </p>
+                <p>
+                    ETOXYLATE FREE | PTHALLATE FREE | PETROLATUM FREE | SULFATE & PARABEN FREE
+                </p>
+                <p>
+                    All ingredients are either 100% Natural / Eco Certified & 100% safe to use.
+                </p>
+                <a href="">Know More</a>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+
+</section>
