--- a/frontend/views/template/footer.html
+++ b/frontend/views/template/footer.html
@@ -1,12 +1,13 @@
 <footer>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6">
-                <p>Copyright &copy; {{template.year}}. All Right Resvered.</p>
+                <p>Copyright &copy; RawNature Pvt. Ltd.{{template.year}}. | All Right Resvered.</p>
             </div>
             <div class="col-sm-6">
                 <div class="pull-right">
-                    <p>Developed by <a href="http://www.wohlig.com" target="_blank">Wohlig Technology</a>.</p>
+                    <p>Designed by <a href="http://www.aavidcode.com" target="_blank">Aavidcode</a>. | Developed by <a href="http://www.aavidcode.com"
+                            target="_blank">Aavidcode</a>.</p>
                 </div>
             </div>
         </div>
